<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primeColor"
    tools:context=".InsertData">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">



       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:fontFamily="monospace"
           android:padding="12dp"
           android:text="@string/add_task"
           android:gravity="center_horizontal"
           android:textColor="@color/white"
           android:textSize="22sp"
           android:textStyle="bold"
           />

       <EditText
           android:id="@+id/taskfield"
           android:layout_width="match_parent"
           android:layout_height="45dp"
           android:layout_gravity="center"
           android:background="@drawable/inputfield"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:layout_marginTop="12dp"
           android:hint="@string/enter_your_task"
           android:textColor="@color/white"
           android:textColorHint="#5C5C5C"
          android:padding="12dp"
           />


        <EditText
            android:id="@+id/priorityfield"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/inputfield"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/Priority"
            android:textColor="@color/white"
            android:textColorHint="#5C5C5C"
            android:padding="12dp"
            />

        <Button
            android:id="@+id/savebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center"
            android:padding="12dp"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:background="@drawable/btnstyle2"
            />



    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>