<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primeColor"
    tools:context=".UpdateDelete">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="12dp"
            android:text="@string/add_task"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/taskupd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/inputfield"
            android:hint="@string/enter_your_task"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="#5C5C5C" />


        <EditText
            android:id="@+id/priorityupd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/inputfield"
            android:hint="@string/Priority"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="#5C5C5C" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="12dp"
            >

            <Button
                android:id="@+id/updatebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:layout_gravity="center_horizontal|center_vertical"
                android:padding="12dp"
                android:textColor="@color/white"
                android:layout_marginTop="12dp"
                android:layout_margin="20dp"
                android:background="@drawable/btnstyle2"
                />
            <Button
                android:id="@+id/deletebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_gravity="center_horizontal|center_vertical"
                android:padding="12dp"
                android:textColor="@color/white"
                android:layout_marginTop="12dp"
                android:layout_margin="20dp"
                android:background="@drawable/btnstyle2"
                />
        </LinearLayout>




    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>