<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/primeColor"
    tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UselessParent"
            android:layout_margin="8dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/your_task"
                android:textSize="35sp"
                android:fontFamily="monospace"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_weight="1"
                android:padding="12dp"
                android:layout_gravity="start"

                />

            <Button
                android:id="@+id/deleteallbtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/btnstyle1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/x"
                android:padding="12dp"
                android:layout_marginEnd="12dp"
                />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/activity_viewdata"
                />

            <Button
                android:id="@+id/add"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/plus"
                android:layout_gravity="center_horizontal|bottom|end"
                android:background="@drawable/btnstyle"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="30dp"
                />

        </FrameLayout>




</LinearLayout>